# jibrel-com-web

./: .browserslistrc  .dockerignore  .editorconfig  .gitignore  .gitlab-ci.yml  Dockerfile  README.md  docker-compose.yml  ecosystem.tpl.config.js  index.js  package-lock.json  package.json  run.sh
components/company/: block.json  social-link.json  tag.json  translation.json
config/: application.json  custom.json  general.json  language.json  middleware.json
config/functions/: bootstrap.js
config/locales/: ar.json  en.json  ko.json  zh.json
middlewares/enhance-i18n/: defaults.json  index.js
middlewares/page/: index.js
middlewares/page-meta/: defaults.json  index.js  languages.json
middlewares/sass/: index.js
middlewares/update-config-before-middlewares/: defaults.json  index.js
middlewares/user-meta/: defaults.json  index.js
middlewares/views/: index.js
middlewares/visitor/: defaults.json  index.js
providers/strapi-provider-upload-aws-s3/: package-lock.json  package.json
public/: index.html  navigation.css  style.css
public/js/: navigation.js
public/meta/: site.webmanifest
public/scss/: common.scss  (+2 more)
tests/: .flake8  .gitignore  README.md  conftest.py  pyproject.toml  pytest.ini
tests/pages/: __init__.py  about.py  invest.py  main.py  not_found.py  raise_.py
tests/shared/: __init__.py
tests/specs/: test_all_static_pages_available.py
tests/widgets/: __init__.py  footer.py  navbar.py  widget.py
views/: 404.hbs  500.hbs  about.hbs  company.hbs  index.hbs  invest.hbs  main.hbs  offering.hbs  primary-offering.hbs  raise.hbs
(+93 files in other folders)
