[tool.poetry]
name = "jibrel-com-web-tests"
version = "0.1.0"
description = ""
authors = ["Stanislav Cherenkov <stanislav.cherenkov@jibrel.network>"]

[tool.poetry.dependencies]
python = "^3.7"
pytest = "^5.3.5"
pytest-base-url = "^1.4.1"
selene = {version = "^2.0.0-alpha.21", allow-prereleases = true}
splinter = "^0.13.0"
pypom = "^2.2.0"

[tool.poetry.dev-dependencies]
selenium = "^3.141.0"
flake8 = "^3.7.9"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
